@@ -1,13 +1,18 @@
 package trashsoftware.trashSnooker.core.ai;
 
-import org.apache.commons.math3.distribution.NormalDistribution;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import trashsoftware.trashSnooker.core.*;
+import trashsoftware.trashSnooker.core.attempt.CueType;
 import trashsoftware.trashSnooker.core.cue.Cue;
 import trashsoftware.trashSnooker.core.metrics.GameRule;
 import trashsoftware.trashSnooker.core.metrics.GameValues;
 import trashsoftware.trashSnooker.core.metrics.Rule;
 import trashsoftware.trashSnooker.core.movement.WhitePrediction;
+import trashsoftware.trashSnooker.core.person.CuePlayerHand;
+import trashsoftware.trashSnooker.core.person.HandBody;
+import trashsoftware.trashSnooker.core.person.PlayerHand;
+import trashsoftware.trashSnooker.core.person.PlayerPerson;
 import trashsoftware.trashSnooker.core.phy.Phy;
 import trashsoftware.trashSnooker.core.snooker.AbstractSnookerGame;
 import trashsoftware.trashSnooker.fxml.projection.ObstacleProjection;
@@ -73,6 +78,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
     protected G game;
     protected P aiPlayer;
 
+    protected final Map<AttackChoice, List<AttackParam>> lastResortAttackChoices = new TreeMap<>();
     protected FinalChoice.IntegratedAttackChoice bestAttack;  // 记录一下，不管最后有没有用它
 
     public AiCue(G game, P aiPlayer) {
@@ -169,7 +175,142 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                 dtFromFirst);
     }
 
-//    private List<>
+    private double[] powerValuesOfCueAngle(double[] origValues, double origLimit, double cueAngleDeg) {
+        List<Double> availValues = new ArrayList<>();
+        double ctrlPower = CuePlayParams.powerWithCueAngle(
+                aiPlayer.getPlayerPerson().handBody,
+                aiPlayer.getInGamePlayer().getCueSelection().getSelected().brand,
+                origLimit,
+                cueAngleDeg
+        );
+        for (double ov : origValues) {
+            if (ov <= ctrlPower) availValues.add(ov);
+            else {
+                availValues.add(ctrlPower);
+                break;
+            }
+        }
+        double[] res = new double[availValues.size()];
+        for (int i = 0; i < res.length; i++) res[i] = availValues.get(i);
+        return res;
+    }
+
+    private FinalChoice.IntegratedAttackChoice tryLastResortAttack(Phy phy) {
+        if (lastResortAttackChoices.isEmpty()) return null;
+
+        FinalChoice.IntegratedAttackChoice best = null;
+
+        for (var entry : lastResortAttackChoices.entrySet()) {
+            System.out.println(entry.getValue().size() + " Last resort attacks");
+            AttackChoice choice = entry.getKey();
+            if (aiOnlyDouble && !(choice instanceof AttackChoice.DoubleAttackChoice)) continue;
+            int nextTarget = game.getTargetAfterPotSuccess(choice.ball, game.isDoingSnookerFreeBll());
+            
+            FinalChoice.IntegratedAttackChoice iac = pureAttack(
+                    entry.getValue(),
+                    nextTarget,
+                    nextStepLegalBalls(nextTarget, choice.ball),
+                    phy,
+                    game.getGamePlayStage(choice.ball, false),
+                    true,
+                    null
+            );
+            if (best == null || iac != null) {
+                if (best == null || iac.price > best.price) {
+                    best = iac;
+                }
+            }
+        }
+        return best;
+    }
+
+    @SuppressWarnings("unchecked")
+    private FinalChoice.IntegratedAttackChoice pureAttack(
+            List<AttackParam> pureAttacks,
+            int nextTarget,
+            List<Ball> nextStepLegalBalls,
+            Phy phy,
+            GamePlayStage stage,
+            boolean mustAttack,
+            @Nullable Game<?, P>[] gameClonesPool) {
+        long t1 = System.currentTimeMillis();
+        if (gameClonesPool == null) {
+            gameClonesPool = (Game<?, P>[]) new Game[nThreads];
+            for (int i = 0; i < gameClonesPool.length; i++) {
+                gameClonesPool[i] = game.clone();
+            }
+        }
+
+        List<AttackThread> attackThreads = new ArrayList<>();
+        for (AttackParam pureAttack : pureAttacks) {
+            AttackThread thread = new AttackThread(
+                    pureAttack,
+                    game.getGameValues(),
+                    nextTarget,
+                    nextStepLegalBalls,
+                    phy,
+                    gameClonesPool,
+                    aiPlayer,
+                    stage,
+                    kickPriceCalculator()
+            );
+            attackThreads.add(thread);
+        }
+
+        try (ExecutorService executorService = Executors.newFixedThreadPool(nThreads)) {
+            for (AttackThread thread : attackThreads) {
+                executorService.execute(thread);
+            }
+            executorService.shutdown();
+
+            if (!executorService.awaitTermination(1, TimeUnit.MINUTES))
+                throw new RuntimeException("AI thread not terminated.");  // Wait for all threads complete.
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        long t2 = System.currentTimeMillis();
+
+        List<FinalChoice.IntegratedAttackChoice> choiceList = new ArrayList<>();
+        for (AttackThread thread : attackThreads) {
+            if (thread.result != null) choiceList.add(thread.result);
+        }
+        System.out.println("Ai calculated attacks of given choice in " + (t2 - t1) + " ms, " + choiceList.size() + " valid results");
+
+        AiPlayStyle aps = aiPlayer.getPlayerPerson().getAiPlayStyle();
+
+        if (!choiceList.isEmpty()) {
+            double pureAttackThresh = Analyzer.attackProbThreshold(PURE_ATTACK_PROB, aps);
+
+            choiceList.sort(FinalChoice.IntegratedAttackChoice::normalCompareTo);
+            for (FinalChoice.IntegratedAttackChoice iac : choiceList) {
+                if (!iac.nextStepAttackChoices.isEmpty()) {
+                    AttackChoice bestNextStep = iac.nextStepAttackChoices.getFirst();
+                    if (bestNextStep.defaultRef.potProb >= pureAttackThresh) {
+                        System.out.println("Penalty, tor = " + iac.penalty + ", " + iac.positionErrorTolerance);
+                        return iac;  // 我纯进攻下一杆也得走个纯进攻的位撒
+                    }
+                }
+            }
+
+            FinalChoice.IntegratedAttackChoice iac = choiceList.getFirst();
+            if (iac.nextStepTarget == Game.END_REP || mustAttack) {
+                System.out.println("Attack a must attack one");
+                return iac;
+            }
+
+            if (iac.priceOfKick >= 1.0) {  // 能K正确的球
+                double kickProbLow = 0.6;
+                double kickProbHigh = 0.9;
+                if (Math.random() < kickProbLow + (iac.priceOfKick - 1) * (kickProbHigh - kickProbLow)) {
+                    // priceOfKick是1，概率为0.6
+                    // priceOfKick是2，概率为0.9
+                    // 大于等于2.几，必定k
+                    return iac;
+                }
+            }
+        }
+        return null;
+    }
 
     private FinalChoice.IntegratedAttackChoice attack(AttackChoice choice,
                                                       int nextTarget,
@@ -182,7 +323,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 //        double tick;
         double[][] availSpins;
         double[] powerValues;
-        
+
         int totalTicks = (int) Math.round(aiPlayer.getPlayerPerson().getAiPlayStyle().position / 5);
 
         if (choice instanceof AttackChoice.DirectAttackChoice) {
@@ -195,7 +336,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         } else {
             throw new RuntimeException();
         }
-        
+
         AiPlayStyle aps = aiPlayer.getPlayerPerson().getAiPlayStyle();
 //        double likeShow = aiPlayer.getPlayerPerson().getAiPlayStyle().likeShow;  // 喜欢大力及杆法的程度
         GamePlayStage stage = game.getGamePlayStage(choice.ball, false);
@@ -222,7 +363,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
             } else {
                 dirVec = choice.cueDirectionUnitVector;
             }
-            
+
             // 这里其实只是近似值，因为后面有让点、弧线那些情况，会导致这个稍有不同
             CueBackPredictor.Result backPre =
                     game.getObstacleDtHeight(dirVec[0], dirVec[1],
@@ -238,7 +379,11 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 //            System.out.println("Obstacle: " + op);
             int availSpinCount = 0;
 
-            for (double selectedPower : powerValues) {
+            double[] availPowers = powerValuesOfCueAngle(powerValues,
+                    powerLimit,
+                    cueAngle);
+
+            for (double selectedPower : availPowers) {
                 for (double[] spins : availSpins) {
                     double[] realSpins = cue.aiCuePoint(spins, game.getGameValues().ball);
 
@@ -319,84 +464,31 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
             return null;
         }
 
-        Game[] gameClonesPool = new Game[nThreads];
+        pureAttacks.sort((a, b) -> -Double.compare(a.potProb, b.potProb));
+        defensiveAttacks.sort((a, b) -> -Double.compare(a.potProb, b.potProb));
+
+        // 只留简单的
+        pureAttacks = new ArrayList<>(pureAttacks.subList(0, Math.min(64, pureAttacks.size())));
+        defensiveAttacks = new ArrayList<>(defensiveAttacks.subList(0, Math.min(64, defensiveAttacks.size())));
+
+        List<AttackParam> backups = new ArrayList<>(pureAttacks);
+        backups.addAll(defensiveAttacks);
+        lastResortAttackChoices.put(choice, backups);
+
+        @SuppressWarnings("unchecked")
+        Game<?, P>[] gameClonesPool = (Game<?, P>[]) new Game[nThreads];
         for (int i = 0; i < gameClonesPool.length; i++) {
             gameClonesPool[i] = game.clone();
         }
 
-        List<AttackThread> attackThreads = new ArrayList<>();
-        for (AttackParam pureAttack : pureAttacks) {
-            AttackThread thread = new AttackThread(
-                    pureAttack,
-                    game.getGameValues(),
-                    nextTarget,
-                    nextStepLegalBalls,
-                    phy,
-                    gameClonesPool,
-                    aiPlayer,
-                    stage,
-                    kickPriceCalculator()
-            );
-            attackThreads.add(thread);
-        }
-
-        ExecutorService executorService = Executors.newFixedThreadPool(nThreads);
-        for (AttackThread thread : attackThreads) {
-            executorService.execute(thread);
-        }
-
-        executorService.shutdown();
-
-        try {
-            if (!executorService.awaitTermination(1, TimeUnit.MINUTES))
-                throw new RuntimeException("AI thread not terminated.");  // Wait for all threads complete.
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
-        }
-        long t2 = System.currentTimeMillis();
-
-        List<FinalChoice.IntegratedAttackChoice> choiceList = new ArrayList<>();
-        for (AttackThread thread : attackThreads) {
-            if (thread.result != null) choiceList.add(thread.result);
-        }
-        System.out.println("Ai calculated attacks of given choice in " + (t2 - t1) + " ms, " + choiceList.size() + " valid results");
-
-        if (!choiceList.isEmpty()) {
-            double pureAttackThresh = Analyzer.attackProbThreshold(PURE_ATTACK_PROB, aps);
-
-            choiceList.sort(FinalChoice.IntegratedAttackChoice::normalCompareTo);
-            for (FinalChoice.IntegratedAttackChoice iac : choiceList) {
-                if (!iac.nextStepAttackChoices.isEmpty()) {
-                    AttackChoice bestNextStep = iac.nextStepAttackChoices.get(0);
-                    if (bestNextStep.defaultRef.potProb >= pureAttackThresh) {
-                        System.out.println("Penalty, tor = " + iac.penalty + ", " + iac.positionErrorTolerance);
-                        return iac;  // 我纯进攻下一杆也得走个纯进攻的位撒
-                    }
-                }
-            }
-
-            FinalChoice.IntegratedAttackChoice iac = choiceList.get(0);
-            if (iac.nextStepTarget == Game.END_REP || mustAttack) {
-                System.out.println("Attack a must attack one");
-                return iac;
-            }
-
-            if (iac.priceOfKick >= 1.0) {  // 能K正确的球
-                double kickProbLow = 0.6;
-                double kickProbHigh = 0.9;
-                if (Math.random() < kickProbLow + (iac.priceOfKick - 1) * (kickProbHigh - kickProbLow)) {
-                    // priceOfKick是1，概率为0.6
-                    // priceOfKick是2，概率为0.9
-                    // 大于等于2.几，必定k
-                    return iac;
-                }
-            }
-
-//            if (iac.nextStepTarget != Game.END_REP && iac.whitePrediction.getSecondCollide() == null)
-//                return null;  // 打进了没位，打什么打
-//
-//            return iac;  // 这是最烂的结果
-        }
+        FinalChoice.IntegratedAttackChoice pureIac = pureAttack(pureAttacks,
+                nextTarget,
+                nextStepLegalBalls,
+                phy,
+                stage,
+                mustAttack,
+                gameClonesPool);
+        if (pureIac != null) return pureIac;
 
         if (defensiveAttacks.isEmpty() || !supportAttackWithDefense(choice.attackTarget))
             return null;
@@ -421,14 +513,12 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
             defensiveThreads.add(dat);
         }
 
-        ExecutorService executorService2 = Executors.newFixedThreadPool(nThreads);
-        for (DefensiveAttackThread thread : defensiveThreads) {
-            executorService2.execute(thread);
-        }
+        try (ExecutorService executorService2 = Executors.newFixedThreadPool(nThreads)) {
+            for (DefensiveAttackThread thread : defensiveThreads) {
+                executorService2.execute(thread);
+            }
+            executorService2.shutdown();
 
-        executorService2.shutdown();
-
-        try {
             if (!executorService2.awaitTermination(1, TimeUnit.MINUTES))
                 throw new RuntimeException("AI thread not terminated.");  // Wait for all threads complete.
         } catch (InterruptedException e) {
@@ -472,7 +562,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         return makeAttackCue(iac, iac.attackParams.attackChoice.cueType());
     }
 
-    protected AiCueResult makeAttackCue(FinalChoice.IntegratedAttackChoice iac, AiCueResult.CueType cueType) {
+    protected AiCueResult makeAttackCue(FinalChoice.IntegratedAttackChoice iac, CueType cueType) {
         AttackParam attackParam = iac.attackParams;
         AttackChoice attackChoice = attackParam.attackChoice;
 
@@ -485,8 +575,8 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                 attackChoice.cueDirectionUnitVector[0],
                 attackChoice.cueDirectionUnitVector[1],
                 attackParam.cueParams,
-                game.frameImportance(aiPlayer.getInGamePlayer().getPlayerNumber()),
-                game.getEntireGame().rua(aiPlayer.getInGamePlayer()));
+                iac,
+                game.frameImportance(aiPlayer.getInGamePlayer().getPlayerNumber()));
         List<double[]> whitePath;
         if (iac.whitePrediction != null) {
             whitePath = iac.whitePrediction.getWhitePath();
@@ -504,7 +594,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         return acr;
     }
 
-    protected AiCueResult makeDefenseCue(FinalChoice.DefenseChoice choice, AiCueResult.CueType cueType) {
+    protected AiCueResult makeDefenseCue(FinalChoice.DefenseChoice choice, CueType cueType) {
         AiCueResult acr = new AiCueResult(aiPlayer.getInGamePlayer(),
                 game.getGamePlayStage(choice.ball, true),
                 cueType,
@@ -514,8 +604,8 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                 choice.cueDirectionUnitVector[0],
                 choice.cueDirectionUnitVector[1],
                 choice.cueParams,
-                game.frameImportance(aiPlayer.getInGamePlayer().getPlayerNumber()),
-                game.getEntireGame().rua(aiPlayer.getInGamePlayer()));
+                choice,
+                game.frameImportance(aiPlayer.getInGamePlayer().getPlayerNumber()));
         acr.setWhitePath(choice.wp != null ? choice.wp.getWhitePath() : null);
         return acr;
     }
@@ -524,7 +614,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         if (game.isBreaking()) {
             FinalChoice.DefenseChoice breakChoice = breakCue(phy);
             System.out.println("AI break: " + breakChoice);
-            if (breakChoice != null) return makeDefenseCue(breakChoice, AiCueResult.CueType.BREAK);
+            if (breakChoice != null) return makeDefenseCue(breakChoice, CueType.BREAK);
         }
 
         if (!aiOnlyDefense) {
@@ -537,7 +627,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         FinalChoice.DefenseChoice stdDefense = standardDefense();
         if (stdDefense != null) {
             System.out.println("AI standard defense");
-            return makeDefenseCue(stdDefense, AiCueResult.CueType.DEFENSE);
+            return makeDefenseCue(stdDefense, CueType.DEFENSE);
         }
         FinalChoice.DefenseChoice defenseChoice = getBestDefenseChoice(phy);
         if (defenseChoice != null) {
@@ -546,19 +636,27 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 //            System.out.printf("Best defense choice: %f %f %f %f %f\n", 
 //                    defenseChoice.price, defenseChoice.snookerPrice, defenseChoice.opponentAttackPrice,
 //                    defenseChoice.penalty, defenseChoice.tolerancePenalty);
-            return makeDefenseCue(defenseChoice, AiCueResult.CueType.DEFENSE);
+            if (!aiOnlyDefense && 
+                    defenseChoice.opponentCanPureAttack(game.getAnotherPlayer(aiPlayer).getPlayerPerson().getAiPlayStyle())) {
+                System.out.println("Defense not good, try last resort");
+                FinalChoice.IntegratedAttackChoice iac = tryLastResortAttack(phy);
+                if (iac != null) {
+                    return makeAttackCue(iac);
+                }
+            }
+            return makeDefenseCue(defenseChoice, CueType.DEFENSE);
         }
         FinalChoice.DefenseChoice solveSnooker = solveSnooker(phy, false);
         if (solveSnooker != null) {
             System.out.println("AI solve snooker");
             System.out.println(solveSnooker);
-            return makeDefenseCue(solveSnooker, AiCueResult.CueType.SOLVE);
+            return makeDefenseCue(solveSnooker, CueType.SOLVE);
         }
         FinalChoice.DefenseChoice solveSnooker2 = solveSnooker(phy, true);  // 只能说是逼急了，来个袋角解斯诺克
         System.out.println("Cannot solve snooker! Try pocket arc!");
         if (solveSnooker2 != null) {
             System.out.println("AI solve snooker by pocket arc");
-            return makeDefenseCue(solveSnooker2, AiCueResult.CueType.SOLVE);
+            return makeDefenseCue(solveSnooker2, CueType.SOLVE);
         }
         System.out.println("Ai random angry cue");
         return randomAngryCue();
@@ -586,6 +684,19 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         }
         return iac;
     }
+    
+    private List<Ball> nextStepLegalBalls(int nextTarget, @Nullable Ball selfBall) {
+        List<Ball> nextStepLegalBalls =
+                game.getAllLegalBalls(nextTarget,
+                        false,
+                        false);  // 这颗进了下一颗怎么可能是自由球/手中球
+
+        if (game.getGameType() == GameRule.CHINESE_EIGHT || game.getGameType() == GameRule.LIS_EIGHT) {
+            // 避免AI打自己较自己的可能（并不确定会发生）
+            nextStepLegalBalls.remove(selfBall);
+        }
+        return nextStepLegalBalls;
+    }
 
     protected FinalChoice.IntegratedAttackChoice attackGivenChoices(List<? extends AttackChoice> attackChoices,
                                                                     Phy phy, boolean mustAttack) {
@@ -597,15 +708,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                 AttackChoice choice = attackChoices.get(i);
                 int nextTargetIfThisSuccess = game.getTargetAfterPotSuccess(choice.ball,
                         game.isDoingSnookerFreeBll());
-                List<Ball> nextStepLegalBalls =
-                        game.getAllLegalBalls(nextTargetIfThisSuccess,
-                                false,
-                                false);  // 这颗进了下一颗怎么可能是自由球/手中球
-
-                if (game.getGameType() == GameRule.CHINESE_EIGHT || game.getGameType() == GameRule.LIS_EIGHT) {
-                    // 避免AI打自己较自己的可能（并不确定会发生）
-                    nextStepLegalBalls.remove(choice.ball);
-                }
+                List<Ball> nextStepLegalBalls = nextStepLegalBalls(nextTargetIfThisSuccess, choice.ball);
 
                 FinalChoice.IntegratedAttackChoice iac = attack(choice,
                         nextTargetIfThisSuccess, nextStepLegalBalls, phy, mustAttack);
@@ -649,25 +752,32 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         Random random = new Random();
         double directionRad = random.nextDouble() * Math.PI * 2;
         double[] directionVec = Algebra.unitVectorOfAngle(directionRad);
-        
+
         Cue cue = aiPlayer.getInGamePlayer().getCueSelection().getSelected().getNonNullInstance();
-        
+
         double[] cuePointAngle = Analyzer.findCueAblePointAndAngle(
                 game,
                 cue,
                 directionVec,
                 DEFENSE_SPIN_POINTS
         );
-        
-        PlayerHand handSkill = CuePlayParams.getPlayableHand(
+
+        CuePlayerHand handSkill = HandBody.getBestHandFromPosition(
                 game.getCueBall().getX(), game.getCueBall().getY(),
                 directionVec[0], directionVec[1],
                 cuePointAngle[2],
                 game.getGameValues().table,
-                game.getCuingPlayer().getPlayerPerson()
+                game.getCuingPlayer().getPlayerPerson(),
+                cue.getBrand()
         );
-        double power = random.nextDouble() *
-                (handSkill.getMaxPowerPercentage() - 20.0) + 20.0;
+//        double power = random.nextDouble() *
+//                (handSkill.getMaxPowerPercentage() - 20.0) + 20.0;
+        double power = CuePlayParams.powerWithCueAngle(
+                aiPlayer.getPlayerPerson().handBody,
+                cue.getBrand(),
+                handSkill.getMaxPowerPercentage(),
+                cuePointAngle[2]
+        );
         CueParams cueParams = CueParams.createBySelected(
                 power,
                 cuePointAngle[0],
@@ -680,15 +790,15 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         return new AiCueResult(
                 aiPlayer.getInGamePlayer(),
                 GamePlayStage.NORMAL,
-                AiCueResult.CueType.DEFENSE,
+                CueType.DEFENSE,
                 null,
                 null,
                 null,
                 directionVec[0],
                 directionVec[1],
                 cueParams,
-                game.frameImportance(aiPlayer.getInGamePlayer().getPlayerNumber()),
-                game.getEntireGame().rua(aiPlayer.getInGamePlayer())
+                null,
+                game.frameImportance(aiPlayer.getInGamePlayer().getPlayerNumber())
         );
     }
 
@@ -746,12 +856,12 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 
         NavigableSet<DefenseAngle> availableRads = new TreeSet<>();
         for (Ball ball : legalBalls) {
-            if (!game.pointToPointCanPassBall(whitePos[0], whitePos[1], 
-                    ball.getX(), ball.getY(), game.getCueBall(), ball, 
+            if (!game.pointToPointCanPassBall(whitePos[0], whitePos[1],
+                    ball.getX(), ball.getY(), game.getCueBall(), ball,
                     false, false)) {
                 continue;
             }
-            
+
             double[] directionVec = new double[]{ball.getX() - whitePos[0], ball.getY() - whitePos[1]};
             double distance = Math.hypot(directionVec[0], directionVec[1]);
             double alpha = Algebra.thetaOf(directionVec);  // 白球到目标球球心连线的绝对角
@@ -811,11 +921,12 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                 null);
 
         List<DefenseThread> defenseThreads = new ArrayList<>();
-        Game[] gameClonesPool = new Game[nThreads];
+        @SuppressWarnings("unchecked")
+        Game<?, P>[] gameClonesPool = (Game<?, P>[]) new Game[nThreads];
         for (int i = 0; i < gameClonesPool.length; i++) {
             gameClonesPool[i] = game.clone();
         }
-        
+
         int totalTicks = (int) Math.round(aiPlayer.getPlayerPerson().getAiPlayStyle().defense / 5);
         double[] selectedPowerArray = Algebra.generateSkewedRange(
                 selPowLow,
@@ -823,7 +934,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                 totalTicks,
                 POWER_TICK_EXP
         );
-        
+
         if (availableRads.size() > 180) {
             Util.randomShrinkTo(availableRads, 180);
         }
@@ -840,14 +951,12 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 
         System.out.println(availableRads.size() + " defense angles, " + defenseThreads.size() + " defenses");
 
-        ExecutorService executorService = Executors.newFixedThreadPool(nThreads);
-        for (DefenseThread thread : defenseThreads) {
-            executorService.execute(thread);
-        }
+        try (ExecutorService executorService = Executors.newFixedThreadPool(nThreads)) {
+            for (DefenseThread thread : defenseThreads) {
+                executorService.execute(thread);
+            }
+            executorService.shutdown();
 
-        executorService.shutdown();
-
-        try {
             if (!executorService.awaitTermination(1, TimeUnit.MINUTES))
                 throw new RuntimeException("AI thread not terminated.");  // Wait for all threads complete.
         } catch (InterruptedException e) {
@@ -892,28 +1001,14 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         Ball cueBall = game.getCueBall();
         double[] whitePos = new double[]{cueBall.getX(), cueBall.getY()};
 
-//        List<DefenseThread> defenseThreads = new ArrayList<>();
-        Game[] gameClonesPool = new Game[nThreads];
+        @SuppressWarnings("unchecked")
+        Game<?, P>[] gameClonesPool = (Game<?, P>[]) new Game[nThreads];
         for (int i = 0; i < gameClonesPool.length; i++) {
             gameClonesPool[i] = game.clone();
         }
 
-//        double realPowerTick = smallPower ? powerTick / 3.0 : powerTick;
-        double ctrlPower = aiPlayer.getPlayerPerson().handBody.getPrimary().getControllablePowerPercentage();
+        double[] selectedPowerArray = getSelectedPowerArray(smallPower);
 
-        double powerLimit = smallPower ?
-                Math.min(45.0, ctrlPower) :
-                ctrlPower;
-
-        int totalTicks = (int) Math.round(aiPlayer.getPlayerPerson().getSolving() / 10.0);
-        if (smallPower) totalTicks *= 2;
-        double[] selectedPowerArray = Algebra.generateSkewedRange(
-                5.0,
-                powerLimit,
-                totalTicks,
-                POWER_TICK_EXP
-        );
-        
         List<AngleSnookerSolver> angleSolvers = new ArrayList<>();
 
         for (double deg = 0.0; deg < 360; deg += degreesTick) {
@@ -935,14 +1030,12 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
             angleSolvers.add(ass);
         }
 
-        ExecutorService executorService = Executors.newFixedThreadPool(nThreads);
-        for (AngleSnookerSolver thread : angleSolvers) {
-            executorService.execute(thread);
-        }
+        try (ExecutorService executorService = Executors.newFixedThreadPool(nThreads)) {
+            for (AngleSnookerSolver thread : angleSolvers) {
+                executorService.execute(thread);
+            }
+            executorService.shutdown();
 
-        executorService.shutdown();
-
-        try {
             if (!executorService.awaitTermination(1, TimeUnit.MINUTES))
                 throw new RuntimeException("AI thread not terminated.");  // Wait for all threads complete.
         } catch (InterruptedException e) {
@@ -953,9 +1046,6 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         for (AngleSnookerSolver ass : angleSolvers) {
             for (FinalChoice.DefenseChoice result : ass.results) {
                 if (notViolateCushionRule(result)) {
-//                    if (smallPower && result.wp.getWhiteSpeedWhenHitFirstBall() > realPowerTick * 25) {
-//                        continue;
-//                    }
                     if (smallPower && result.wp.getWhiteSpeedWhenHitFirstBall() > 100) {
                         continue;
                     }
@@ -976,6 +1066,23 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         if (rnd > 0.4) return bests.get(0);
         else if (rnd > 0.1) return bests.get(1);
         else return bests.get(2);
+    }
+
+    private double @NotNull [] getSelectedPowerArray(boolean smallPower) {
+        double ctrlPower = aiPlayer.getPlayerPerson().handBody.getPrimary().getControllablePowerPercentage();
+
+        double powerLimit = smallPower ?
+                Math.min(45.0, ctrlPower) :
+                ctrlPower;
+
+        int totalTicks = (int) Math.round(aiPlayer.getPlayerPerson().getSolving() / 10.0);
+        if (smallPower) totalTicks *= 2;
+        return Algebra.generateSkewedRange(
+                5.0,
+                powerLimit,
+                totalTicks,
+                POWER_TICK_EXP
+        );
     }
 
     protected FinalChoice.DefenseChoice getBestDefenseChoice(Phy phy) {
@@ -999,10 +1106,8 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 
         AiPlayStyle aps = aiPlayer.getPlayerPerson().getAiPlayStyle();
         double degreesTick = 100.0 / 2 / aps.defense;
-//        double powerTick = 1000.0 / aps.defense;
-//        double eachBallNTicks = aps.defense / 8.0;
         return directDefense(legalBalls, degreesTick,
-                5.0, actualPowerHigh, phy);
+                actualPowerLow, actualPowerHigh, phy);
     }
 
     private class AngleSnookerSolver implements Runnable {
@@ -1037,7 +1142,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         final List<Ball> nextStepLegalBalls;
         final Phy phy;
         final GamePlayStage stage;
-        final Game[] gameClonesPool;
+        final Game<?, ?>[] gameClonesPool;
         final Player aiPlayer;
         final KickPriceCalculator kickPriceCalculator;
 //        Game<?, ?> game2;  // todo: 这里的clone可以用线程池优化
@@ -1049,7 +1154,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                                int nextTarget,
                                List<Ball> nextStepLegalBalls,
                                Phy phy,
-                               Game[] gameClonesPool,
+                               Game<?, ?>[] gameClonesPool,
                                Player aiPlayer,
                                GamePlayStage stage,
                                KickPriceCalculator kickPriceCalculator) {
@@ -1066,7 +1171,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 
         @Override
         public void run() {
-            int threadIndex = (int) (Thread.currentThread().getId() % gameClonesPool.length);
+            int threadIndex = (int) (Thread.currentThread().threadId() % gameClonesPool.length);
             Game<?, ?> copy = gameClonesPool[threadIndex];
             //        System.out.print(selectedPower);
 
@@ -1173,7 +1278,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         boolean solving;
         Set<Ball> legalSet;
         Phy phy;
-        Game[] gameClonesPool;
+        Game<?, P>[] gameClonesPool;
         boolean allowPocketCorner;
 
         FinalChoice.DefenseChoice result;
@@ -1185,7 +1290,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                                 boolean isSolving,
                                 Set<Ball> legalSet,
                                 Phy phy,
-                                Game[] gameClonesPool,
+                                Game<?, P>[] gameClonesPool,
                                 boolean allowPocketCorner) {
             this.rad = rad;
             this.nativePrice = nativePrice;
@@ -1200,11 +1305,12 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 
         @Override
         public void run() {
-            int threadIndex = (int) (Thread.currentThread().getId() % gameClonesPool.length);
+            int threadIndex = (int) (Thread.currentThread().threadId() % gameClonesPool.length);
             Game<?, P> copy = gameClonesPool[threadIndex];
 
             double[] unitXY = Algebra.unitVectorOfAngle(rad);
 
+            PlayerPerson playerPerson = aiPlayer.getPlayerPerson();
             Cue cue = aiPlayer.getInGamePlayer().getCueSelection().getSelected().getNonNullInstance();
             double[] cuePointAngle = Analyzer.findCueAblePointAndAngle(
                     copy,
@@ -1213,15 +1319,27 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
                     DEFENSE_SPIN_POINTS
             );
 
-            PlayerHand handSkill = CuePlayParams.getPlayableHand(
+            CuePlayerHand handSkill = HandBody.getBestHandFromPosition(
                     whitePos[0],
                     whitePos[1],
                     unitXY[0],  // fixme: 这里存疑
                     unitXY[1],
                     cuePointAngle[2],
                     copy.getGameValues().table,
-                    copy.getCuingPlayer().getPlayerPerson()
+                    playerPerson,
+                    cue.getBrand()
             );
+
+            double ctrlPowerLimit = CuePlayParams.powerWithCueAngle(
+                    playerPerson.handBody,
+                    cue.getBrand(),
+                    handSkill.getControllablePowerPercentage(),
+                    cuePointAngle[2]
+            );
+            if (selectedPower > ctrlPowerLimit) {
+                // 发不了这个力
+                return;
+            }
 
             CueParams cueParams = CueParams.createBySelected(
                     selectedPower,
@@ -1261,20 +1379,20 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
         double[] whitePos;
         Set<Ball> legalSet;
         Phy phy;
-        Game[] gameClonesPool;
+        Game<?, P>[] gameClonesPool;
 
         AttackParam attackParam;
         GameValues values;
 
         FinalChoice.DefenseChoice result;
-        double targetCanMove;
+//        double targetCanMove;
 
         protected DefensiveAttackThread(
                 AttackParam attackParam,
                 double[] whitePos,
                 Set<Ball> legalSet,
                 Phy phy,
-                Game[] gameClonesPool,
+                Game<?, P>[] gameClonesPool,
                 GameValues values) {
             this.attackParam = attackParam;
             this.whitePos = whitePos;
@@ -1286,7 +1404,7 @@ public abstract class AiCue<G extends Game<?, P>, P extends Player> {
 
         @Override
         public void run() {
-            int threadIndex = (int) (Thread.currentThread().getId() % gameClonesPool.length);
+            int threadIndex = (int) (Thread.currentThread().threadId() % gameClonesPool.length);
             Game<?, P> copy = gameClonesPool[threadIndex];
 
             // todo: 有可能出现加了弧线就绕不过去那种情况
